<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CloudMobile Settings</string>

    <string name="screen_colors_title">Colors</string>
    <string name="category_mdnie_title">Screen</string>
    <string name="mdnie_scenario_title_head">Scenario</string>
    <string name="mdnie_scenario_summary_head">Set the mDNIe scenario</string>
    <string name="mdnie_mode_title_head">Mode</string>
    <string name="mdnie_mode_summary_head">Set the mDNIe mode</string>
    <string name="mdnie_negative_title_head">Negative mode</string>
    <string name="mdnie_negative_summary_head">Invert display colors</string>
    <string name="mdnie_outdoor_title_head">Outdoor mode</string>
    <string name="mdnie_outdoor_summary_head">Adjust display for outdoor use</string>
    <string name="panel_gamma_title_head">Screen gamma</string>
    <string name="panel_gamma_summary_head">Set screen gamma value</string>

    <string name="touchscreen_subcat_title">Touchscreen</string>
    <string name="touchscreen_sensitivity_title_head">Touch sensitivity</string>
    <string name="touchscreen_sensitivity_summary_head">Set touch panel sensitivity</string>

    <string name="category_sensors_title">Sensors</string>
    <string name="gyro_subcat_title">Gyroscope</string>
    <string name="use_gyro_calibration_title_head">Use calibration data</string>
    <string name="use_gyro_calibration_summary_head">Use the gyroscope calibration values. Do a calibration after checking this!</string>
    <string name="calibrate_gyro_title_head">Calibrate</string>
    <string name="calibrate_gyro_summary_head">Put your phone on a flat surface, and press this to calibrate</string>
    <string name="touchkey_subcat_title">Touch key</string>
    <string name="touchkey_light_title_head">Enable keys backlight</string>
    <string name="touchkey_light_summary_head">Light up touch keys when screen is on</string>
    <string name="touchkey_bln_title_head">Enable keys notifications</string>
    <string name="touchkey_bln_summary_head">Light up touch keys when screen is off, and a notification is received</string>

    <string name="cabc_title_head">CABC</string>
    <string name="cabc_summary_head">Enable content adaptive backlight control</string>

    <string name="category_sound_title">Sound</string>
    <string name="sound_volume_title">Volume</string>
    <string name="voc_ep_xgain_title_head">Extra gain in voice calls</string>
    <string name="voc_ep_xgain_summary_head">Boost volume of earpiece during voice calls</string>
    <string name="category_dock_title">Dock</string>
    <string name="dockaudio_subcat_title">DOCK AUDIO</string>
    <string name="use_dock_audio_title_head">Use Dock USB Audio</string>
    <string name="use_dock_audio_summary_head">Use the passive audio out on the dock</string>
	
    <string name="eco_subcat_title">Power Save</string>	
    <string name="eco_mode_title">Eco Mode</string>
    <string name="eco_mode_gpu_head">Eco GPU</string>
    <string name="eco_mode_summary_gpu_head">Limit the GPU freq</string>
    <string name="eco_mode_display_head">ECO Display</string>
    <string name="eco_mode_summary_display_head">Turn on to save more power, will cause lower display quality</string>		
</resources>
